Menambah paragraf lorem

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Hello World!!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse veniam libero consequatur quibusdam, totam laudantium eius laborum inventore cum, quia, recusandae suscipit doloribus illo? Illum sed fuga quas quaerat temporibus.</p>
 </body>
 </html>
