--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Tambah Judul</h1>
     <p>Hello World!!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse veniam libero consequatur quibusdam, totam laudantium eius laborum inventore cum, quia, recusandae suscipit doloribus illo? Illum sed fuga quas quaerat temporibus.</p>
+    <p>Wakwau</p>
 </body>
 </html>
